implemented services logic and security config